[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/menu/ConnectionItem.gd" type="Script" id=1]
[ext_resource path="res://images/icons/trash.png" type="Texture" id=2]
[ext_resource path="res://images/icons/trash_clickbitmap.bmp" type="BitMap" id=3]

[node name="ConnectionItem" type="Panel"]
margin_right = 376.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutputName" type="Label" parent="."]
anchor_right = 0.4
anchor_bottom = 0.3
margin_top = -7.62939e-06
margin_bottom = -7.62939e-06
text = "IDHere"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutputLabel" type="Label" parent="."]
anchor_top = 0.7
anchor_right = 0.4
anchor_bottom = 1.0
text = "Output"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EllipsisLabel" type="Label" parent="."]
anchor_left = 0.4
anchor_right = 0.6
anchor_bottom = 1.0
text = "to:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DeleteButton" type="TextureButton" parent="."]
anchor_left = 0.401775
anchor_top = 0.0433258
anchor_right = 0.601775
anchor_bottom = 0.293326
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
texture_click_mask = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="InputName" type="Button" parent="."]
anchor_left = 0.6
anchor_right = 1.0
anchor_bottom = 0.3
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
text = "Select..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputLabel" type="Label" parent="."]
anchor_left = 0.6
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
text = "Input"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="OutputContainer" type="CenterContainer" parent="."]
anchor_top = 0.3
anchor_right = 0.4
anchor_bottom = 0.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutputSelection" type="OptionButton" parent="OutputContainer"]
margin_left = 54.0
margin_top = 10.0
margin_right = 95.0
margin_bottom = 30.0
text = "..."
align = 1
selected = 0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="InputContainer" type="CenterContainer" parent="."]
anchor_left = 0.6
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputSelection" type="OptionButton" parent="InputContainer"]
margin_left = 54.0
margin_top = 10.0
margin_right = 95.0
margin_bottom = 30.0
text = "..."
align = 1
items = [ "...", null, false, 0, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="pressed" from="DeleteButton" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="InputName" to="." method="_on_InputName_pressed"]
